syntax = "proto3";

package Kahuna.Server.Replication.Protos;

message LockMessage {
  int32 type = 1;
  string resource = 2;
  optional bytes owner = 3;
  int64 fencingToken = 4;
  int64 expireLogical = 5;
  uint32 expireCounter = 6;
  int64 timeLogical = 7;
  uint32 timeCounter = 8;
}